welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:9: error: overloaded method value * with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (scala.collection.immutable.Range.Inclusive)
		for (y<-(2*(0 to k)).reverse)
                          ^